# CAGEcleaner

./: .readthedocs.yaml  README.md  env.yml  pyproject.toml  setup.py
bioconda_recipe/: meta.yaml
cagecleaner/: classes.py  communication.py  dereplicate_assemblies.sh  download_assemblies.sh  file_utils.py  generate_session.py  genome_run.py  get_accessions.sh  local.py  local_genome_run.py  local_region_run.py  local_run.py  main.py  region_run.py  remote.py  remote_genome_run.py  remote_region_run.py  remote_run.py  run.py  util.py  utils.py  validators.py
docker/: Dockerfile
docs/: api_ref.rst  conf.py  index.rst
docs/guide/: install.rst  usage.rst
example/output/: cleaned_binary.txt  clusters.txt  genome_cluster_sizes.txt  genome_cluster_status.txt  mappings.txt
examples/BGC0001171/: query.fasta
examples/BGC0001171/output/: cleaned_binary.txt  clusters.txt  genome_cluster_sizes.txt  genome_cluster_status.txt  pairs.txt
examples/N398V589S066P61/: binary.txt  stats  summary.txt
examples/N398V589S066P61/cagecleaner/: clusters.txt  extended_binary_table.txt  filtered_binary.txt  filtered_session.json  filtered_summary.txt  genome_cluster_sizes.txt  genome_cluster_status.txt  retained_cluster_numbers.txt  scaffold_assembly_pairs.txt
examples/N398V589S066P61/method_genomes/: extended_binary.txt  (+4 more)
examples/actinorhodin/: binary.txt  query.fasta  stats
examples/cfoldseeker_query/: clusters.tsv  hits.tsv  queries.tsv  session.json
src/cagecleaner/: cagecleaner.py  classes.py  dereplicate_assemblies.sh  download_assemblies.sh  get_accessions.sh  main.py
(+95 files in other folders)
