[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CAGEcleaner"
version = "1.5.0"
description = "Redundancy removal for gene cluster mining hit sets"

authors = [
    {name = "Lucas De Vrieze", email = "lucas.devrieze@kuleuven.be"},
	{name = "Miguel Biltjes", email = "miguel.biltjes@kuleuven.be"}
]
maintainers = [
    {name = "Lucas De Vrieze", email = "lucas.devrieze@kuleuven.be"},
	{name = "Miguel Biltjes", email = "miguel.biltjes@kuleuven.be"}
]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "scipy <=1.14.1",
    "biopython",
    "cblaster >=1.3.20",
    "pandas <3.0.0",
    "skder >=1.3.4",
    "networkx",
]

readme = "README.md"

requires-python = ">=3.12.0"

license = {text = "MIT"}

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

[project.scripts]
cagecleaner = "cagecleaner.main:main"

[tool.setuptools.packages.find]
include = ["cagecleaner*"]
